[package]
name = "nrf-sensor"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[features]
default = ["ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-sec"]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers"]}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7" }

atomic-polyfill = "1.0.2"
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "99b4ea7", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features= ["print-defmt"] }
nrf-softdevice = { rev = "3b3eabb", git = "https://github.com/embassy-rs/nrf-softdevice", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { rev = "3b3eabb", git = "https://github.com/embassy-rs/nrf-softdevice" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = "0.7.1"
atomic-pool = "1.0.0"
static_cell = "1.0.0"
bitflags = "2.4.0"
